force-app/main/default/objects/Application_Qualification_Provided__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipName>Application_Qualifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Completion_Year__c</fullName>
        <formula>TEXT(Contact_Qualification__r.Year_of_Completion__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Qualification__c</fullName>
        <label>Contact Qualification</label>
        <referenceTo>Contact_Qualification__c</referenceTo>
        <relationshipName>Application_Qualifications</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Date_Achieved__c</fullName>
        <description>Mirror&apos;s related Contact Qualification&apos;s Date Achieved field value</description>
        <formula>Contact_Qualification__r.Date_Achieved__c</formula>
        <label>Date Achieved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GTE_Risk_Rating__c</fullName>
        <description>GTE Risk Rating for Qualifications Provided for Application</description>
        <formula>TEXT(Contact_Qualification__r.Qualification_Country__r.GTE_Risk_Rating__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GTE Risk Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution_Name__c</fullName>
        <description>Mirror&apos;s related contact qualification&apos;s Awarding Body/Institution Name field value</description>
        <formula>IF(Contact_Qualification__r.Institution_Name__c != null, Contact_Qualification__r.Institution_Name__c, Contact_Qualification__r.Other_Institution__c)</formula>
        <label>Institution Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Submitted__c</fullName>
        <formula>IF( Contact_Qualification__r.Reference_Count__c &gt;1, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualification_Name__c</fullName>
        <formula>IF(Contact_Qualification__r.Other_Qualification__c != null, Contact_Qualification__r.Other_Qualification__c, Contact_Qualification__r.Qualification__r.Qualification_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualification Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_Test_Completed__c</fullName>
        <description>Mirrors Contact Qualification isTestCompleted__c</description>
        <formula>IF(ISPICKVAL(Contact_Qualification__r.Year_of_Completion__c, &apos;&apos;), false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualification Test Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualification_Type__c</fullName>
        <formula>Contact_Qualification__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualification Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <description>Sequence number to send to callista for a particular contact qualification type</description>
        <label>Sequence Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Application Qualification Provided</label>
    <nameField>
        <displayFormat>AQP-{000000}</displayFormat>
        <label>Application Qualification Provided ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Qualifications Provided</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>